--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-.bundle
-db/*.sqlite3
-log/*.log
-tmp/**/*
+## MAC OS
+.DS_Store
+
+## TEXTMATE
+*.tmproj
+tmtags
+
+## EMACS
+*~
+\#*
+.\#*
+
+## VIM
+*.swp
+
+## PROJECT::GENERAL
+coverage
+rdoc
+pkg
+
+## PROJECT::SPECIFIC
